--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,17 @@
-body {
-	background-color: #fefefe;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	font-family: arial,verdana,sans-serif;
-}
-
 * {
     -webkit-touch-callout:none;
     -webkit-user-select:none;
     -moz-user-select:none;
     -ms-user-select:none;
     user-select:none;
+}
+body {
+	background-color: #eee;			
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	font-family: arial,verdana,sans-serif;
+	margin: 0;
 }
 
 .icons .genericon, .icons .entypo {
