--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@
 body {
 	background-color: #eee;			
 	width: 100%;
+	height: 100%;
 	overflow: hidden;
 	font-family: arial,verdana,sans-serif;
 	margin: 0;
