--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,12 @@ body {
 }
 
 .wrapper {
-	
+	background-color: red;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
 }
 
 .icons .genericon, .icons .entypo {
