--- a/styles/date_range.css
+++ b/styles/date_range.css
@@ -2,7 +2,7 @@ div.date_range {
 	position: absolute;
 	bottom: 0px;
 	width: 100%;
-	height: 170px;
+	height: 220px;
 	padding: 0;
 	text-align: center;
 	transition-timing-function: ease-in;
@@ -12,9 +12,9 @@ div.date_range {
 }
 
 div.date_range_close {
-	transform: translate(0px,150px);
-	-ms-transform: translate(0px,150px);
-	-webkit-transform: translate(0px,150px);
+	transform: translate(0px,190px);
+	-ms-transform: translate(0px,190px);
+	-webkit-transform: translate(0px,190px);
 }
 div.date_range form {
 	position: relative;
@@ -26,7 +26,7 @@ div.date_range div.date_range_container {
 	position: relative;
 	display: inline-block;
 	width: 485px;
-	height: 175px;
+	height: 220px;
 	background-color: #fefefe;
 	padding: 0px 0px 5px 9px;
 
@@ -39,8 +39,8 @@ div.date_range div.date_range_container {
 	box-shadow:         0px -1px 5px 1px rgba(150, 150, 150, 0.33);
 }
 div.date_range div.date_range_container .handle {
-	height: 15px;
-	padding-top: 5px;
+	height: 25px;
+	padding-top: 10px;
 }
 
 div.date_range div.date_range_container .lines {
@@ -48,10 +48,18 @@ div.date_range div.date_range_container .lines {
 	border-left: none;
 	border-right: none;
 	position: absolute;
-	top: 45px;
+	top: 60px;
 	left: 0px;
 	width: 100%;
-	height: 19px;
+	height: 18px;
+}
+
+div.date_range div.date_range_container .lines div {
+	font-family: 'Exo 2', sans-serif;
+	font-weight: 200;
+	font-size: 90%;
+	line-height: 15px;
+	margin-left: 186px;
 }
 
 div.drum figure {
@@ -65,9 +73,12 @@ div.drum figure {
 	margin-left: 10px;
 }
 
-#drum_from_hours, #drum_to_hours, 
-#drum_from_minutes, #drum_to_minutes,
 #drum_from_date, #drum_to_date {
+	width: 28px;
+}
+
+#drum_from_hours, #drum_to_hours, 
+#drum_from_minutes, #drum_to_minutes {
 	width: 25px;
 }
 
@@ -100,7 +111,7 @@ div.drum figure {
 	font-weight: 400;
 	font-size: 90%;
 	border-bottom: 1px solid #CCC;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 }
 
 .date_range_header span.title {
