--- a/styles/date_range.css
+++ b/styles/date_range.css
@@ -2,7 +2,7 @@ div.date_range {
 	position: absolute;
 	bottom: 0px;
 	width: 100%;
-	height: 220px;
+	height: 205px;
 	padding: 0;
 	text-align: center;
 	transition-timing-function: ease-in;
@@ -11,24 +11,51 @@ div.date_range {
 	-webkit-transition-duration: 0.2s;
 }
 
+div.date_range .handle {
+	height: 25px;
+}
+
+div.date_range .handle .up, div.date_range .handle .down {
+	display: none;
+	margin-top: 7px;
+}
+
+div.date_range .show_up .up {
+	display: inline;
+}
+
+div.date_range .show_down .down {
+	display: inline;
+}
+
 div.date_range_close {
-	transform: translate(0px,190px);
-	-ms-transform: translate(0px,190px);
-	-webkit-transform: translate(0px,190px);
+	transform: translate(0px,180px);
+	-ms-transform: translate(0px,180px);
+	-webkit-transform: translate(0px,180px);
 }
 div.date_range form {
 	position: relative;
 }
-div.date_range_to {
-	margin-left: 25px;
+
+div.date_range div.drum-wrapper .inner {
+	top: 10px;
 }
+
+div.date_range .dial {
+	height: 56px !important;
+} 
+
+div.date_range div.drum-wrapper {
+	float: left;
+}
+
 div.date_range div.date_range_container {
 	position: relative;
 	display: inline-block;
-	width: 485px;
+	max-width: 480px;
 	height: 220px;
 	background-color: #fefefe;
-	padding: 0px 0px 5px 9px;
+	padding: 0px 10px 0px 10px;
 
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -38,11 +65,12 @@ div.date_range div.date_range_container {
 	-moz-box-shadow:    0px -1px 5px 1px rgba(150, 150, 150, 0.33);
 	box-shadow:         0px -1px 5px 1px rgba(150, 150, 150, 0.33);
 }
-div.date_range div.date_range_container .handle {
-	height: 25px;
-	padding-top: 10px;
-	position: relative;
-	width: 475px;
+
+div.date_range_from, div.date_range_to {
+	width: 220px;
+	float: left;
+	text-align: left;
+	margin: 5px 10px;
 }
 
 div.date_range div.date_range_container .handle .heading {
@@ -50,60 +78,65 @@ div.date_range div.date_range_container .handle .heading {
 	font-size: 90%;
 	font-family: 'Exo 2', sans-serif;
 	text-align: left;
-	left: 0px;
-	top: 6px;
+	left: 7px;
+	top: 3px;
 }
 
 div.date_range div.date_range_container .handle button {
 	position: absolute;
 	font-size: 70%;
 	font-family: 'Exo 2', sans-serif;
-	right: 0px;
-	top: 4px;
+	right: 3px;
+	top: 2px;
 	display: none;
 }
 
 div.date_range div.date_range_container .lines {
+	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+	box-sizing: border-box;  	
 	border: solid 1px #CCC;
 	border-left: none;
 	border-right: none;
 	position: absolute;
-	top: 60px;
+	top: 56px;
 	left: 0px;
 	width: 100%;
-	height: 18px;
+	height: 25px;
 }
 
 div.date_range div.date_range_container .lines div {
 	font-family: 'Exo 2', sans-serif;
 	font-weight: 200;
-	font-size: 90%;
-	line-height: 15px;
 	margin-left: 186px;
+	line-height: 20px;
 }
 
 div.drum figure {
 	font-family: 'Exo 2', sans-serif;
 	font-weight: 200;
 	text-align: left;
-	font-size: 90%;
+	line-height: 23px;
 }
 
-#drum_from_date, #drum_to_date {
-	margin-left: 10px;
-}
-
-#drum_from_date, #drum_to_date {
-	width: 28px;
-}
-
+#drum_from_date, #drum_to_date,
 #drum_from_hours, #drum_to_hours, 
 #drum_from_minutes, #drum_to_minutes {
-	width: 25px;
+	width: 30px;
 }
 
-#drum_from_hours, #drum_to_hours {
-	margin-left: 10px;
+#drum_from_date .dial div, #drum_to_date .dial div,
+#drum_from_hours .dial div, #drum_to_hours .dial div, 
+#drum_from_minutes .dial div, #drum_to_minutes .dial div {
+	margin: 0px !important;
+	position: absolute;
+	left: 8px;
+}
+
+#drum_from_date .down div, #drum_to_date .down div,
+#drum_from_hours .down div, #drum_to_hours .down div, 
+#drum_from_minutes .down div, #drum_to_minutes .down div {
+	bottom: 0px;
 }
 
 #drum_from_hours figure, #drum_to_hours figure, 
@@ -113,23 +146,18 @@ div.drum figure {
 }
 
 #drum_from_month, #drum_to_month {
-	width: 75px;
-}
-#drum_from_fullYear, #drum_to_fullYear {
-	width: 38px;
+	width: 85px;
 }
 
-.date_range_from, .date_range_to {
-	width: 225px;
-	float: left;
-	text-align: left;
+#drum_from_fullYear, #drum_to_fullYear {
+	width: 40px;
 }
 
 .date_range_header {
 	height: 25px;
 	font-family: 'Exo 2', sans-serif;
-	font-weight: 400;
 	font-size: 90%;
+	font-weight: 400;
 	border-bottom: 1px solid #CCC;
 	margin-bottom: 5px;
 }
@@ -138,6 +166,7 @@ div.drum figure {
 	float: left;
 	text-align: left;
 }
+
 .date_range_header span.selection {
 	float: right;
 	text-align: right;
