--- a/contrib/panelmenu/panelmenu.css
+++ b/contrib/panelmenu/panelmenu.css
@@ -11,12 +11,19 @@ div.panelmenu .icon, div.panelmenu .item {
 	height: 25px;
 	margin-top: -1px;
 } 
+div.panelmenu .move .glyphicon {
+	top: -1px;
+	left: -1px;	
+}
+div.panelmenu .add .glyphicon {
+	top: -1px;
+}
 
 div.panelmenu .outer {
 	margin: 0px 5px;
 	overflow: hidden;
 	padding-top: 1px;
-	width: 520px;
+	width: 500px;
 	height: 25px;
 	position: relative;
 	float: left;
