--- a/styles/date_range.css
+++ b/styles/date_range.css
@@ -1,19 +1,17 @@
 div.date_range div.date_range_container .handle .heading {
 	position: absolute;
 	font-size: 90%;
-	font-family: 'Exo 2', sans-serif;
 	text-align: left;
-	left: 7px;
-	top: 3px;
+	top: 5px;
 }
 
 div.date_range div.date_range_container .handle button {
 	position: absolute;
 	font-size: 70%;
-	font-family: 'Exo 2', sans-serif;
-	right: 3px;
-	top: 2px;
+	right: 5px;
+	top: 5px;
 	display: none;
+	line-height: 1.1em;
 }
 
 div.date_range form {
@@ -35,7 +33,7 @@ div.date_range div.drum-wrapper {
 div.date_range div.date_range_container {
 	position: relative;
 	display: inline-block;
-	max-width: 480px;
+	max-width: 500px;
 	height: 220px;
 	background-color: #fefefe;
 	padding: 0px 10px 0px 10px;
@@ -53,7 +51,14 @@ div.date_range_from, div.date_range_to {
 	width: 220px;
 	float: left;
 	text-align: left;
-	margin: 5px 10px;
+}
+
+div.date_range_from {
+	margin: 5px 10px 5px 0px;
+}
+
+div.date_range_to {
+	margin: 5px 0px 5px 10px;
 }
 
 div.date_range div.date_range_container .lines {
@@ -67,18 +72,16 @@ div.date_range div.date_range_container .lines {
 	top: 56px;
 	left: 0px;
 	width: 100%;
-	height: 25px;
+	height: 23px;
 }
 
 div.date_range div.date_range_container .lines div {
-	font-family: 'Exo 2', sans-serif;
 	font-weight: 200;
 	margin-left: 186px;
 	line-height: 20px;
 }
 
 div.drum figure {
-	font-family: 'Exo 2', sans-serif;
 	font-weight: 200;
 	text-align: left;
 	line-height: 23px;
@@ -120,7 +123,6 @@ div.drum figure {
 
 .date_range_header {
 	height: 25px;
-	font-family: 'Exo 2', sans-serif;
 	font-size: 90%;
 	font-weight: 400;
 	border-bottom: 1px solid #CCC;
