--- a/styles/menu.css
+++ b/styles/menu.css
@@ -41,5 +41,5 @@ div.mainmenu div.mainmenu_container .handle button {
 	right: 3px;
 	top: -2px;
 	display: none;
-	ine-height: 1em !important;
+	line-height: 1em !important;
 }
