--- a/contrib/panelmenu/panelmenu.css
+++ b/contrib/panelmenu/panelmenu.css
@@ -15,15 +15,20 @@ div.panelmenu .move .glyphicon {
 	top: -1px;
 	left: -1px;	
 }
+div.panelmenu .settings .glyphicon,
 div.panelmenu .add .glyphicon {
 	top: -1px;
+}
+
+div.panelmenu .settings {
+	margin-left: 5px;
 }
 
 div.panelmenu .outer {
 	margin: 0px 5px;
 	overflow: hidden;
 	padding-top: 1px;
-	width: 500px;
+	width: 470px;
 	height: 25px;
 	position: relative;
 	float: left;
