--- a/styles/form.css
+++ b/styles/form.css
@@ -6,6 +6,9 @@
 }
 .form input, .form button {
 	float: none;
+	left: -2000px;
+	position: absolute;
+	-webkit-transform: matrix(.5, 0, 0, .5, 2000, 0);
 }
 .form b, .form label {
 	display: block;
