--- a/styles/menu.css
+++ b/styles/menu.css
@@ -43,3 +43,61 @@ div.mainmenu div.mainmenu_container .handle button {
 	display: none;
 	line-height: 1em !important;
 }
+
+
+div.menu {
+	position: absolute;
+	width: 100%;
+	padding: 0;
+	transition-timing-function: ease-in;
+	-webkit-transition-timing-function: ease-in;
+	transition-duration: 0.2s;
+	-webkit-transition-duration: 0.2s;
+	text-align: center;
+}
+
+div.menu.lower {
+	height: 205px;
+}
+
+div.menu_container {
+	text-align: left;
+}
+
+div.upper {
+	top: 0px;
+}
+
+div.lower {
+	bottom: 0px;
+}
+
+div.menu .handle {
+	height: 25px;
+	text-align: center;
+}
+
+div.menu .handle .up, div.menu .handle .down {
+	display: none;
+	margin-top: 7px;
+}
+
+div.menu .show_up .up {
+	display: inline;
+}
+
+div.menu .show_down .down {
+	display: inline;
+}
+
+div.lower_menu_close {
+	transform: translateY(180px);
+	-ms-transform: translateY(180px);
+	-webkit-transform: translateY(180px);
+}
+
+div.upper_menu_close {
+	transform: translateY(-40px);
+	-ms-transform: translateY(-40px);
+	-webkit-transform: translateY(-40px);
+}
