--- a/styles/form.css
+++ b/styles/form.css
@@ -7,6 +7,11 @@
 .form input, .form button {
 	float: none;
 }
+
+button.edit, button.devices {
+	float: right;
+}
+
 .form b, .form label {
 	display: block;
 }
