--- a/styles/date_range.css
+++ b/styles/date_range.css
@@ -16,6 +16,7 @@ div.date_range div.date_range_container .handle .btn_grp {
 
 div.date_range div.date_range_container .handle .btn_grp button {
 	margin-left: 5px;
+	height: 1.9em;
 }
 
 div.date_range form {
