--- a/compile/styles.css
+++ b/compile/styles.css
@@ -7365,7 +7365,15 @@ div.drum figure {
 div.drum-wrapper div.container, div.drum-wrapper figure {
 	height: 25px;
 	line-height: 25px;
-}div.date_range div.date_range_container .handle .heading {
+}div.date_range {
+	-webkit-touch-callout:none;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
+}
+
+div.date_range div.date_range_container .handle .heading {
 	position: absolute;
 	font-size: 90%;
 	text-align: left;
@@ -7516,11 +7524,7 @@ div.drum figure {
 	width: 20px;
 	background-size: 55%;
 }
-
-.smooth div.drum {
-	transition-duration: 0.2s;
-	-webkit-transition-duration: 0.2s;			
-}div.mainmenu div.mainmenu_container {
+div.mainmenu div.mainmenu_container {
 	position: relative;
 	display: inline-block;
 	max-width: 580px;
