--- a/styles/form.css
+++ b/styles/form.css
@@ -107,3 +107,25 @@ button.edit, button.devices {
 	width: 75px;
 	text-align: right;
 }
+
+.has-switch {
+	height: 28px;
+}
+
+.has-switch label {
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	background-clip: padding-box;
+}
+.has-switch .switch-left {
+	-webkit-border-top-left-radius: 4px;
+	border-top-left-radius: 4px;
+	-webkit-border-bottom-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+}
+.has-switch .switch-right {
+	-webkit-border-top-right-radius: 4px;
+	border-top-right-radius: 4px;
+	-webkit-border-bottom-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
