--- a/styles/menu.css
+++ b/styles/menu.css
@@ -104,3 +104,28 @@ div.upper_menu_close {
 	-ms-transform: translateY(-40px);
 	-webkit-transform: translateY(-40px);
 }
+
+.plotfrom, 
+.plotto {
+	font-size: smaller;
+	color: #545454;
+	background-color: rgb(255, 255, 255);
+	line-height: 22px;
+	width: 110px;
+	height: 22px;
+	position: absolute;
+	bottom: 5px;
+	text-align: center;
+	display: none;
+}
+
+.plotfrom {
+	left: 5px;
+} 
+.plotto {
+	right: 5px;
+}
+div.lower_menu_close .plotfrom, 
+div.lower_menu_close .plotto {
+	bottom: 185px;
+}
