--- a/compile/header.css
+++ b/compile/header.css
@@ -1,5 +1,5 @@
 /*!
- * InternetOfThings Viewer 1.0.2
+ * InternetOfThings Viewer 1.1.0 Beta
  *
  * (c) 2014 Marcel Bretschneider
  * InternetOfThings Viewer may be freely distributed under the Apache 2.0 license.
