--- a/compile/header.css
+++ b/compile/header.css
@@ -1,5 +1,5 @@
 /*!
- * InternetOfThings Viewer 0.0.1
+ * InternetOfThings Viewer 1.1.0beta
  *
  * (c) 2014 Marcel Bretschneider
  * InternetOfThings Viewer may be freely distributed under the MIT license.
